--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install -r requirements.txt
 
 script: 
-  - python -m pytest --cov-report term-missing --cov=app
+  - nosetests --with-coverage --cover-package=app
 
 after_success:
   - coveralls
