--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ python:
 install:
   - pip install -r requirements.txt
 
+before_script:
+  - source ./.travis.sh
+  - psql -c 'create database test_db;' -U postgres
+
 script: 
-  - nosetests --with-coverage --cover-package=app
+  - python -m pytest --cov-report term-missing --cov=app
 
 after_success:
   - coveralls
