--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 
 testpaths = tests/
 
-addopts = --cov-report term-missing --cov=./app
+addopts = --cov-report term-missing --cov=app
 
 filterwarnings = 
     error
