--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==0.9.9
 aniso8601==3.0.0
 asn1crypto==0.24.0
+attrs==18.1.0
 cffi==1.11.5
 click==6.7
+colorama==0.3.9
+coverage==4.5.1
 cryptography==1.9
 Flask==1.0.2
 Flask-Migrate==2.1.1
@@ -15,8 +18,13 @@ Jinja2==2.10
 jwt==0.5.3
 Mako==1.0.7
 MarkupSafe==1.0
+more-itertools==4.1.0
+pluggy==0.6.0
 psycopg2==2.7.4
+py==1.5.3
 pycparser==2.18
+pytest==3.5.1
+pytest-cov==2.5.1
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.4
