--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,6 @@ Flask-SQLAlchemy==2.3.2
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
-jwt==0.5.3
 Mako==1.0.7
 MarkupSafe==1.0
 more-itertools==4.1.0
@@ -23,6 +22,7 @@ pluggy==0.6.0
 psycopg2==2.7.4
 py==1.5.3
 pycparser==2.18
+PyJWT==1.6.1
 pytest==3.5.1
 pytest-cov==2.5.1
 python-dateutil==2.7.3
