--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ alembic==0.9.9
 aniso8601==3.0.0
 asn1crypto==0.24.0
 attrs==18.1.0
+certifi==2018.4.16
 cffi==1.11.5
+chardet==3.0.4
 click==6.7
 colorama==0.3.9
 coverage==4.5.1
+coveralls==1.3.0
 cryptography==1.9
+docopt==0.6.2
 Flask==1.0.2
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
@@ -28,6 +32,8 @@ pytest-cov==2.5.1
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.4
+requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.7
+urllib3==1.22
 Werkzeug==0.14.1
